test/regress/coverage-token-parse-errors.test
; Test token.cc parse error paths
; Exercises unexpected(char) (lines 460-488)
; expected(kind_t) (lines 505-515)
; operator<<(ostream, kind_t) various branches (lines 517-637)
; operator<<(ostream, token_t) (lines 640-657)

; Unclosed parenthesis triggers expected(RPAREN)
; which uses operator<<(ostream, kind_t) for RPAREN (line 536)
; and operator<<(ostream, token_t) default branch -> TOK_EOF (line 630)
test eval "(5" -> 1
__ERROR__
While parsing value expression:
  (5

Error: Invalid token '<end of input>' (wanted ')')
end test

; Expression with + not followed by argument triggers unexpected()
test eval "5 + +" -> 1
__ERROR__
While parsing value expression:
  5 + +
      ^
Error: + operator not followed by argument
end test
